# Gitlab-python-package-template

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  README.md  cookiecutter.json
.github/workflows/: release.yml
{{cookiecutter.package_name}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  README.md  poetry.toml  pyproject.toml  requirements.txt  tox.ini
{{cookiecutter.package_name}}/tests/: conftest.py  test_{{cookiecutter.package_name}}.py
